[package]
name = "ferntree"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Concurrent in-memory B+ Tree featuring optimistic lock coupling"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[features]
default = []
test-utils = []
loom = ["dep:loom"]

[dependencies]
crossbeam-epoch = "0.9"
loom = { version = "0.7", optional = true }
parking_lot = "0.12.5"
parking_lot_core = "0.9"
smallvec = { version = "1.15.1", features = ["serde", "const_generics"] }
thiserror = "2.0.18"

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }
crossbeam-epoch = "0.9"
crossbeam-skiplist = "0.1.3"
loom = "0.7"
proptest = "1.6"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1"
# Enable test-utils feature for integration tests
ferntree = { path = ".", features = ["test-utils"] }

[[bench]]
name = "comparison"
harness = false
